# store-scraper

./: .env  Pipfile  docker-compose.yml  pyproject.toml  readme.md  test.db
app/api/: main.py
app/db/: conn.py  create_user.py  cred.py  database.py  db.sql  write_log.py
app/dependencies/: pagination.py
app/models/: __init__.py  api_keys.py
app/repositories/: product.py
app/schemas/: money.py  product.py  user.py
app/scrapers/: base.py
app/scrapers/devoto/: client.py  devoto.py
app/scrapers/disco/: client.py  disco.py
app/scrapers/geant/: client.py  geant.py
app/scrapers/tata/: client.py  demo.py
app/scrapers/tiendainglesa/: client.py  demo.py
migrations/: env.py
migrations/versions/: 3dd81948e58f_initial_commit.py  818d75d1e6a1_initial_migration.py  d903e6b7f67d_add_timestamp_to_api_key.py
